--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "url": "https://github.com/github/hubot.git"
   },
   "dependencies": {
+    "cheerio": "^0.17.0",
+    "eastasianwidth": ">= 0.0.1",
     "hubot": ">= 2.6.0 < 3.0.0",
     "hubot-scripts": ">= 2.5.0 < 3.0.0",
     "hubot-slack": "^2.1.1",
-    "tumblrbot": "0.1.0",
-    "eastasianwidth": ">= 0.0.1"
+    "request": "^2.42.0",
+    "tumblrbot": "0.1.0"
   },
   "engines": {
     "node": ">= 0.8.x",
